...
        )
    }
}

@Composable
fun FriendsTabRow(selectedTab: Int, onTabSelected: (Int) -> Unit) {
    val tabs = listOf("Actividad", "Siguiendo", "Seguidores", "Descubrir")

    ScrollableTabRow(
        selectedTabIndex = selectedTab,
        containerColor = Color.Transparent,
        contentColor = MaterialTheme.colorScheme.onSurface,
        indicator = { tabPositions ->
...
